# Automated-Tech-Trend-Research-Analyzer

./: .gitignore  README.md  daily.ps1  pyproject.toml  requirements.txt  run.ps1
src/atra/: __main__.py  cli.py  daily_pipeline.py  db.py  insights.py  summarize.py  tagging.py  trends.py
src/atra/api/: __init__.py  main.py
src/atra/dashboard/: __init__.py  app.py
src/atra/sources/: __init__.py  arxiv.py  openalex.py
tools/: Register-AtraDailyTask.ps1
