[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atra"
version = "1.0.0"
description = "Automated Tech-Trend & Research Analyzer (ATRA) — MInT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "feedparser>=6.0.11",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.39.0",
  "pandas>=2.2.0",
]

[project.scripts]
atra = "atra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
